syntax = "proto3";

package internal.conf;

option go_package = "drpshop/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Trace trace = 1;
  Server server = 2;
  Data data = 3;
  UserConfig user_config = 4;
  JwtConfig  jwt_config = 5;
}

message Trace {
    string endpoint = 1;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int32 MaxIdleConnections = 3;
    int32 MaxOpenConnections = 4;
    google.protobuf.Duration MaxConnectionLifeTime = 5;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    int32 db = 3;
    string password = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  Database database = 1;
  Redis redis = 2;
  bytes jwt_cert = 3;
  string casbin_model_path = 4;
}

message UserConfig {
  message Cert {
    bytes key = 1;
    bytes cert = 2;
  }
  Cert cert = 1;
}


message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }
  Consul consul = 1;
}

message JwtConfig {
	string realm  = 1;
	string key    = 2;
    google.protobuf.Duration timeout = 3;
    google.protobuf.Duration max_refresh = 4;
}
